force-app/main/default/objects/Apttus_Approval__SearchFilter__c/Apttus_Approval__SearchFilter__c.object-meta.xml
<CustomObject>
    <description>Represents a search filter</description>
    <label>Search Filter (Approvals)</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters (Approvals)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>