force-app/main/default/objects/Apttus_Approval__SearchFilter__c/fields/Apttus_Approval__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Criteria__c</fullName>
    <description>The filter criteria specification</description>
    <inlineHelpText>The filter criteria specification</inlineHelpText>
    <label>Criteria</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>