force-app/main/default/objects/Apttus_Approval__SearchFilter__c/fields/Apttus_Approval__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Description__c</fullName>
    <description>The description for the filter</description>
    <inlineHelpText>The description for the filter</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>