force-app/main/default/objects/Apttus_Approval__SearchFilter__c/fields/Apttus_Approval__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The filter evaluation sequence</description>
    <inlineHelpText>The filter evaluation sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>