force-app/main/default/objects/Apttus_Approval__SearchFilter__c/fields/Apttus_Approval__UseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__UseType__c</fullName>
    <description>The filter use type</description>
    <inlineHelpText>The filter use type</inlineHelpText>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Filter</fullName>
            </value>
            <value>
                <fullName>Entry Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>