force-app/main/default/objects/Apttus_Approval__SearchFilter__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__BusinessObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>